fix images, align icons

--- a/styles/Report.css
+++ b/styles/Report.css
@@ -44,6 +44,7 @@
 
 .report-conditions {
   margin-top: 3em;
+  display: flex;
 }
 
 .condition {
